fix the hover visiblity on card

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -589,10 +589,18 @@ h3.my-profession {
   width: 100%;
   height: 100%;
   background: var(--skin-color);
-  z-index: -1;
+  z-index: 0;
   transition: all 0.4s ease;
   transform: scaleY(0);
   transform-origin: bottom;
+}
+
+.service .service-item .service-item-inner .icon,
+.service .service-item .service-item-inner h4,
+.service .service-item .service-item-inner p,
+.service .service-item .service-item-inner .service-btn {
+  position: relative;
+  z-index: 1;
 }
 
 .service .service-item .service-item-inner:hover::before {
